working with main task

--- a/class-day-11/main task/index.html
+++ b/class-day-11/main task/index.html
@@ -8,6 +8,72 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <table>
+        <tbody>
+            <tr>
+                <td colspan="2"></td>
+                <td colspan="3"></td>
+                <td colspan="2" class="orange"></td>
+                <td rowspan="6"></td>
+            </tr>
+            <tr>
+                <td rowspan="2"></td>
+                <td colspan="4" rowspan="4" class="red"></td>
+                <td colspan="2" rowspan="2" class="orange"></td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <td rowspan="3"></td>
+                <td rowspan="2"></td>
+                <td rowspan="2"></td>
+            </tr>
+            <tr></tr>
+            <tr>
+                <td colspan="2" rowspan="2" class="black"></td>
+                <td colspan="2"></td>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td rowspan="3" class="orange"></td>
+                <td colspan="2"></td>
+                <td colspan="2" rowspan="2" class="blue"></td>
+                <td rowspan="3" class="red"></td>
+            </tr>
+            <tr>
+                <td colspan="2"rowspan="2" ></td>
+                <td colspan="2" class="black"></td>
+            </tr>
+            <tr>
+                <td colspan="4"></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <!-- <div class="box">Наведи на меня</div> -->
+
+    <!-- <header class="header">
+        <ul class="menu">
+            <il class="menu-item">Главная</il>
+            <il class="menu-item">О компании</il>
+            <il class="menu-item">Информация о том, как к нам доехать</il>
+            <il class="menu-item">О нас</il>
+        </ul>
+    </header> -->
+
+    <!-- <header class="header">
+        <ul class="menu">
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+            <il class="menu-item"></il>
+        </ul>
+    </header> -->
+
 </body>
 </html>
