working with CW D11 ET

--- a/class-day-11/evening task/index.html
+++ b/class-day-11/evening task/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/section-contact-us.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="contact-us">
+        <div class="contact-us-block">
+            <h2>FEEL FREE TO ASK US ANYTHING</h2>
+            <h3>CONTACT US</h3>
+            <!-- <img src="./img/Composed-layer.png" alt=""> -->
+            <p>Donec sollicitudin molestie malesuada. Curabitur aliquet quam id dui posuere blandit. Nulla porttitor accumsan tinci dunt. Quisque velit nisi, pretium ut lacinia in, elemena porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lac inia in, elementum id enim. Vestibulum ac diam sit anet.
+            </p>
+            <ul class="contact-us-cards">
+                <il class="contact-us-cards-item"></il>
+                <il class="contact-us-cards-item"></il>
+                <il class="contact-us-cards-item"></il>
+            </ul>
+            <input type="text" name="anyText">
+            <input type="button" value = "Send Message">
+        </div>
+    </section>
 </body>
 </html>
