Save progress on M04 at 7.17am 2018.11.27

--- a/module-04/index.html
+++ b/module-04/index.html
@@ -22,60 +22,105 @@
     </header>
 
     <main class="main">
+
         <section class="products">
             <h2 class="products-title">featured products</h2>
             <ul class="product-list">
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/1.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name">blue tshirt</span><span class="price">$26</span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">blue tshirt</span>
+                            <span class="price">$26</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/2.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">WOMAN shirt</span>
+                            <span class="price">$31</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/3.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">YELLOW Tshirt</span>
+                            <span class="price">$21</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/4.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">Cool lingerie</span>
+                            <span class="price">$56</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/5.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">blue tshirt</span>
+                            <span class="price">$26</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/6.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">WOMAN shirt</span>
+                            <span class="price">$31</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/7.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">YELLOW Tshirt</span>
+                            <span class="price">$21</span>
+                        </p>
                     </a>
                 </li>
                 <li class="prod-item">
                     <a href="#" class="prod-link">
                         <img src="./img/8.png" alt="" class="prod-img">
-                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                        <p class="prod-paragraf">
+                            <span class="name">Cool lingerie</span>
+                            <span class="price">$56</span>
+                        </p>
                     </a>
                 </li>
             </ul>
         </section>
+
+        <section class="news">
+            <h2 class="news-title">LATEST NEWS</h2>
+            <ul class="news-list">
+                <li class="news-item">
+                    <img src="./img/news1.png" alt="news">
+                    <h3 class="news-item-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
+                    <p class="news-item-paragraph">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+                    <button class="news-item-button">Read More</button>
+                </li>
+                <li class="news-item">
+
+                </li>
+                <li class="news-item">
+
+                </li>
+            </ul>
+        </section>
+
     </main>
+
     <footer></footer>
 </body>
 </html>
