Finish morning task CW D12

--- a/class-day-12/morning task/index.html
+++ b/class-day-12/morning task/index.html
@@ -9,5 +9,102 @@
 </head>
 <body>
 
+<!-- Task2 -->
+    <!-- <table>
+    <tr>
+        <td colspan="3">ячейка 1</td>
+    </tr>
+    <tr>
+        <td>ячейка 2</td>
+        <td rowspan="2">ячейка 3</td>
+        <td>ячейка 4</td>
+    </tr>
+    <tr>
+        <td>ячейка 5</td>
+        <td>ячейка 6</td>
+    </tr>
+</table> -->
+
+<!-- Task3 -->
+    <!-- <table>
+        <tr>
+            <td rowspan="3">ячейка 1</td>
+            <td>ячейка 2</td>
+            <td rowspan="3">ячейка 3</td>
+        </tr>
+        <tr>
+            <td>ячейка 4</td>
+        </tr>
+        <tr>
+            <td>ячейка 5</td>
+        </tr>
+    </table> -->
+    
+<!-- Task4 -->
+    <!-- <table>
+        <tr>
+            <td class="one"></td>
+            <td class="two"></td>
+        </tr>
+    </table>
 </body>
-</html>
+</html> -->
+
+<!-- Task5 -->
+    <!-- <input placeholder="PlaceHolder">
+    <br>
+    <input value="Value">
+    <br>
+    <input value="disabled" disabled>
+    <br>
+    <input type="password" placeholder="Введите пароль" value="123456">
+    <br>
+    <textarea placeholder="Введите текст"></textarea>
+    <br>
+    <input type="submit" value="Кнопка через input">
+    <br>
+    <button>Кнопка через button</button> -->
+
+<!-- Task6 -->
+    <!-- <form action="">
+        <input placeholder="PlaceHolder" id="ph">  
+        <label for="ph">Это метка для инпута - нажмите на меня - и инпут получит фокус!</label>
+        <br>
+        <input type="submit" value="Отправить на сервер">
+    </form>  -->
+
+<!-- Task7 -->
+    <form action="#" class="input">
+        <input type="checkbox" id="first">
+        <label for="first">Это метка для чекбокса: нажмите на меня - чекбокс сменит галочку!</label>
+        <br>
+        <br>
+   
+        <input type="checkbox" id="second" checked>
+        <label for="second">Я отмечен по умолчанию!</label>
+        <br>
+        <br>
+
+        <input type="checkbox" id="third" disabled>
+        <label for="third">Я disabled!</label>
+        <br>
+        <br>
+
+        <p class="box">
+        <br>
+        Это группа радиокнопок - только одна из них может быть отмечена!
+        <br>
+        <br>
+
+        <input type="radio" id="rad1" name="radioactive">
+        <label for="rad1">Это метка для радио</label>
+        <br>
+        <br>
+
+        <input type="radio" id="rad2" name="radioactive">
+        <label for="rad2">Это метка для радио</label>
+        <br>
+        <br>
+
+        </p>
+    </form>
