--- a/class-day-12/evening task/index.html
+++ b/class-day-12/evening task/index.html
@@ -4,10 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/iroy-styles.css">
     <title>Document</title>
 </head>
 <body>
     
+
+    <footer class="footer">
+        <p class="footer-par">© MINI 2014, All Right Reserves  |  Designed By bigpsfan & Metrothemes</p>
+        <ul class="social">
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/twitter@1X.png" alt="twitter">
+                </a>
+            </li>
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/facebook@1X.png" alt="Facebook">
+                </a>
+            </li>
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/linkedin@1X.png" alt="LinkedIn">
+                </a>
+            </li>
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/dribbble@1X.png" alt="Dribbble">
+                </a>
+            </li>
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/pinterest@1X.png" alt="Pinterest">
+                </a>
+            </li>
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/google+@1X.png" alt="Google+">
+                </a>
+            </li>
+            <li class="social-link">
+                <a href="">
+                    <img src="./img/rss@1X.png" alt="RSS">
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
