--- a/class-day-12/evening task/index.html
+++ b/class-day-12/evening task/index.html
@@ -8,7 +8,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="clients">
+        <div class="clients-box">
+            <h2>Our Clients</h2>
+            <ul class="clients-list">
+                <li class="clients-item">
+                    <img src="" alt="">
+                </li>
+                <li class="clients-item">
+                    <img src="" alt="">
+                </li>
+                <li class="clients-item">
+                    <img src="" alt="">
+                </li>
+                <li class="clients-item">
+                    <img src="" alt="">
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <footer class="footer">
         <p class="footer-par">© MINI 2014, All Right Reserves  |  Designed By bigpsfan & Metrothemes</p>
