--- a/class-day-13/double-buble/index.html
+++ b/class-day-13/double-buble/index.html
@@ -8,6 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section class="insta">
+        <ul class="insta-list">
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+            <li><img src="./img/Layer 2@1X.png" alt=""></li>
+        </ul>
+        <div class="insta-block">
+            <img src="./img/i-logo.png" alt="">
+            <p class="insta-block-p">Instagram</p>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer-logo">
+            <img src="./img/f-logo.png" alt="footer logo">
+            <p>© 2015 HUGO. All rights resevered. Designed by DZOAN</p>
+        </div>
+        <ul class="footer-social">
+            <li><img src="./img/t@1X.png" alt=""></li>
+            <li><img src="./img/f@1X.png" alt=""></li>
+            <li><img src="./img/c@1X.png" alt=""></li>
+        </ul>
+    </footer>
 </body>
 </html>
