--- a/module-08/index.html
+++ b/module-08/index.html
@@ -8,6 +8,52 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="head">
+        <div class="nav">
+            <h1 class="nav-logo">
+                <a href="#" class="nav-logo-text">URLAUBSGLÜCK</a>
+            </h1>
+            <div class="nav-menu">
+                <a href="" class="nav-menu-item">Log in</a>
+                <a href="" class="nav-menu-item">Sign up</a>
+            </div>
+        </div>
+        <section class="find">
+            <h2 class="find-h">Share your holiday dreams</h2>
+            <p class="find-p">And find the perfect partner to fullfill it</p>
+            <button class="find-button">Find your holiday partner</button>
+        </section>
+    </header>
+
+    <main>
+        <section class="meet">
+                <h3 class="meet">Meet a partner for your best holiday</h3>
+
+                <ul class="meet-list">
+                    <li class="meet-item">
+                        <img src="./img/user1@1X.png" scrset="./img/user1@2X.png 2x" alt="" class="meet-item-img">
+                        <h4 class="meet-item-name">Bradley Hunter</h4>
+                        <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
+                    </li>
+                    <li class="meet-item">
+                        <img src="./img/user2@1X.png" scrset="./img/user2@2X.png 2x" alt="" class="meet-item-img">
+                        <h4 class="meet-item-name">Heather Walker</h4>
+                        <p class="meet-item-comment">I'm a happy person that loves cats and climbing on mountains.</p>
+                    </li>
+                    <li class="meet-item">
+                        <img src="./img/user3@1X.png" scrset="./img/user3@2X.png 2x" alt="" class="meet-item-img">
+                        <h4 class="meet-item-name">Lucas Marsha</h4>
+                        <p class="meet-item-comment">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                    </li>
+                    <li class="meet-item">
+                        <img src="./img/user4@1X.png" scrset="./img/user4@2X.png 2x" alt="" class="meet-item-img">
+                        <h4 class="meet-item-name">Bradley Hunter</h4>
+                        <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
+                    </li>
+                </ul>
+
+        </section>
+
+    </main>
 </body>
 </html>
