--- a/module-08/index.html
+++ b/module-08/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/media_up_768.css">
+    <link rel="stylesheet" href="css/media_up_1440.css">
     <title>Document</title>
 </head>
 <body>
-    <header class="head">
+    <header class="header">
         <div class="nav">
             <h1 class="nav-logo">
                 <a href="#" class="nav-logo-text">URLAUBSGLÜCK</a>
@@ -25,35 +27,41 @@
         </section>
     </header>
 
-    <main>
+    <main class="main">
         <section class="meet">
-                <h3 class="meet">Meet a partner for your best holiday</h3>
-
-                <ul class="meet-list">
-                    <li class="meet-item">
+            <h3 class="meet-head">Meet a partner for your best holiday</h3>
+            <ul class="meet-list">
+                <li class="meet-item">
+                    <div class="meet-item-icon user1">
                         <img src="./img/user1@1X.png" scrset="./img/user1@2X.png 2x" alt="" class="meet-item-img">
-                        <h4 class="meet-item-name">Bradley Hunter</h4>
-                        <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
-                    </li>
-                    <li class="meet-item">
+                    </div>
+                    <h4 class="meet-item-name">Bradley Hunter</h4>
+                    <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+                <li class="meet-item">
+                    <div class="meet-item-icon user2">
                         <img src="./img/user2@1X.png" scrset="./img/user2@2X.png 2x" alt="" class="meet-item-img">
-                        <h4 class="meet-item-name">Heather Walker</h4>
-                        <p class="meet-item-comment">I'm a happy person that loves cats and climbing on mountains.</p>
-                    </li>
-                    <li class="meet-item">
+                    </div>
+                    <h4 class="meet-item-name">Heather Walker</h4>
+                    <p class="meet-item-comment">I'm a happy person that loves cats and climbing on mountains.</p>
+                </li>
+                <li class="meet-item">
+                    <div class="meet-item-icon user3">
                         <img src="./img/user3@1X.png" scrset="./img/user3@2X.png 2x" alt="" class="meet-item-img">
-                        <h4 class="meet-item-name">Lucas Marsha</h4>
-                        <p class="meet-item-comment">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
-                    </li>
-                    <li class="meet-item">
+                    </div>
+                    <h4 class="meet-item-name">Lucas Marsha</h4>
+                    <p class="meet-item-comment">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
+                </li>
+                <li class="meet-item">
+                    <div class="meet-item-icon user4">
                         <img src="./img/user4@1X.png" scrset="./img/user4@2X.png 2x" alt="" class="meet-item-img">
-                        <h4 class="meet-item-name">Bradley Hunter</h4>
-                        <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
-                    </li>
-                </ul>
-
+                    </div>
+                    <h4 class="meet-item-name">Bradley Hunter</h4>
+                    <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
+                </li>
+            </ul>
+            <button class="meet-button">See other partners</button>
         </section>
-
     </main>
 </body>
 </html>
