--- a/module-08/index.html
+++ b/module-08/index.html
@@ -33,7 +33,7 @@
             <ul class="meet-list">
                 <li class="meet-item">
                     <div class="meet-item-icon user1">
-                        <img src="./img/user1@1X.png" scrset="./img/user1@2X.png 2x" alt="" class="meet-item-img">
+                        <img src="./img/user1@1X.png" srcset="./img/user1@2X.png 2x" alt="" class="meet-item-img">
                     </div>
                     <h4 class="meet-item-name">Bradley Hunter</h4>
                     <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
