--- a/module-08/index.html
+++ b/module-08/index.html
@@ -40,21 +40,21 @@
                 </li>
                 <li class="meet-item">
                     <div class="meet-item-icon user2">
-                        <img src="./img/user2@1X.png" scrset="./img/user2@2X.png 2x" alt="" class="meet-item-img">
+                        <img src="./img/user2@1X.png" srcset="./img/user2@2X.png 2x" alt="" class="meet-item-img">
                     </div>
                     <h4 class="meet-item-name">Heather Walker</h4>
                     <p class="meet-item-comment">I'm a happy person that loves cats and climbing on mountains.</p>
                 </li>
                 <li class="meet-item">
                     <div class="meet-item-icon user3">
-                        <img src="./img/user3@1X.png" scrset="./img/user3@2X.png 2x" alt="" class="meet-item-img">
+                        <img src="./img/user3@1X.png" srcset="./img/user3@2X.png 2x" alt="" class="meet-item-img">
                     </div>
                     <h4 class="meet-item-name">Lucas Marsha</h4>
                     <p class="meet-item-comment">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
                 </li>
                 <li class="meet-item">
                     <div class="meet-item-icon user4">
-                        <img src="./img/user4@1X.png" scrset="./img/user4@2X.png 2x" alt="" class="meet-item-img">
+                        <img src="./img/user4@1X.png" srcset="./img/user4@2X.png 2x" alt="" class="meet-item-img">
                     </div>
                     <h4 class="meet-item-name">Bradley Hunter</h4>
                     <p class="meet-item-comment">Based in Chicago. I love playing tennis and loud music.</p>
