--- a/module-08/index.html
+++ b/module-08/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/media_up_768.css">
     <link rel="stylesheet" href="css/media_up_1440.css">
-    <title>Document</title>
+    <title>GoIT-FS9-Module08</title>
 </head>
 <body>
     <header class="header">
