--- a/module-09/index.html
+++ b/module-09/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>GoIT-FS-Module09</title>
 </head>
 <body>
-    
+    <div class="conteiner">
+        <div class="row backimg text-center">
+            <header class="header col-12 ">
+                <div class="row">
+                    <h1 class="header-logo order-1 col-12 col-md-6 order-md-0">URLAUBSGLÜCK</h1>
+                    <div class="header-links col-12 col-md-6">
+                        <a href="" class="header-login col-12">Log in</a>
+                        <a href="" class="header-singin col-12">Sign up</a>
+                    </div>
+                </div>
+            </header>
+            <div class="header-block col-12 justify-content-center">
+                <h2 class="header-title offset-md-3 col-md-6">Share your holiday dreams</h2>
+                <p class="header-subtitle">And find the perfect partner to fullfill it</p>
+                <a href="" class="header-link">Find your holiday partner</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
