--- a/class-day-16/DayTask/index.html
+++ b/class-day-16/DayTask/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>CW D16 Display:grid</title>
 </head>
 <body>
-    
+    <div class="wrap">
+        <div class="item1">1</div>
+        <div class="item2">2</div>
+        <div class="item3">3</div>
+        <div class="item4">4</div>
+        <div class="item5">5</div>
+        <div class="item6">6</div>
+    </div>
 </body>
 </html>
