--- a/class-day-16/EveningTask/index.html
+++ b/class-day-16/EveningTask/index.html
@@ -37,20 +37,20 @@
         <div class="main-wrap">
             <ul class="main-list">
                 <li class="main-list-card item1">
-                    <img src="./img/145450979512236977.jpg" alt="">
+                    <img src="./img/1.jpg" alt="" width="230">
                 </li>
                 <li class="main-list-card item2">
-                    <img src="./img/1454509810159393312.jpg" alt="">
+                    <img src="./img/3.jpg" alt=""  width="230>
                 </li>
                 <li class="main-list-card item3">
                     <img src="./img/1454509927176364472.jpg" alt="">
                 </li>
                 <li class="main-list-card item4">
-                        <img src="./img/145450979512236977.jpg" alt="">
+                        <img src="./img/4.jpg" alt="">
 
                 </li>
                 <li class="main-list-card item5">
-                        <img src="./img/1454509943120930750.jpg" alt="">
+                        <img src="./img/5.jpg" alt="">
 
                 </li>
                 <li class="main-list-card item6">
@@ -152,7 +152,7 @@
                 <form class="subscribe" action="">
                     <input type = "text" placeholder="Name"
                     name="user_name" required>
-                    <input type="email" placeholder="Email" autofocus name="user_email" required autocomplete="off">
+                    <input type="email" placeholder="Email" name="user_email" required autocomplete="off">
                     <button type="submit" id="submit">SUBSCRIBE</button>
                 </form>
             </div>
