CW D16 ET home retouch

--- a/class-day-16/EveningTask/index.html
+++ b/class-day-16/EveningTask/index.html
@@ -37,55 +37,52 @@
         <div class="main-wrap">
             <ul class="main-list">
                 <li class="main-list-card item1">
-                    <img src="./img/1.jpg" alt="" width="230">
+                    <img src="./img/1.jpg" alt="">
                 </li>
                 <li class="main-list-card item2">
-                    <img src="./img/3.jpg" alt=""  width="230>
+                    <img src="./img/3.jpg" alt="">
                 </li>
                 <li class="main-list-card item3">
                     <img src="./img/1454509927176364472.jpg" alt="">
                 </li>
                 <li class="main-list-card item4">
-                        <img src="./img/4.jpg" alt="">
-
+                    <img src="./img/4.jpg" alt="">
                 </li>
                 <li class="main-list-card item5">
-                        <img src="./img/5.jpg" alt="">
-
+                    <img src="./img/5.jpg" alt="">
                 </li>
                 <li class="main-list-card item6">
-                        <img src="./img/1454509879186521924.jpg" alt="">
-
+                    <img src="./img/6.jpg" alt="">
                 </li>
                 <li class="main-list-card item7">
-                        <img src="./img/1454509886189483621.jpg" alt="">
-
+                    <img src="./img/7.jpg" alt="">
                 </li>
                 <li class="main-list-card item8">
-                        <img src="./img/145450979512236977.jpg" alt="">
-
+                    <img src="./img/8.jpg" alt="">
                 </li>
                 <li class="main-list-card item9">
-                        <img src="./img/1454509826156664005.jpg" alt="">
-
+                    <img src="./img/9.jpg" alt="">
                 </li>
                 <li class="main-list-card item10">
-                        <img src="./img/145450984711340020.jpg" alt="">
-
+                    <img src="./img/10.jpg" alt="">
                 </li>
-                <li class="main-list-card item11">                    <img src="./img/145450986719777833.jpg" alt="">
+                <li class="main-list-card item11">
+                    <img src="./img/145450986719777833.jpg" alt="">
                 </li>
                 <li class="main-list-card item12">
-                        <img src="./img/1454509879186521924.jpg" alt="">
-
+                    <img src="./img/11.jpg" alt="">
                 </li>
-                <li class="main-list-card item13">                    <img src="./img/1454509886189483621.jpg" alt="">
+                <li class="main-list-card item13">
+                    <img src="./img/2.jpg" alt="">
                 </li>
-                <li class="main-list-card item14">                    <img src="./img/1454509894170493173.jpg" alt="">
+                <li class="main-list-card item14">
+                    <img src="./img/1.jpg" alt="">
                 </li>
-                <li class="main-list-card item15">                    <img src="./img/1454509906193436357.jpg" alt="">
+                <li class="main-list-card item15">
+                    <img src="./img/4.jpg" alt="">
                 </li>
-                <li class="main-list-card item16">                    <img src="./img/1454509943120930750.jpg" alt="">
+                <li class="main-list-card item16">
+                    <img src="./img/5.jpg" alt="">
                 </li>
             </ul>
         </div>
