--- a/module-04/index.html
+++ b/module-04/index.html
@@ -104,17 +104,23 @@
         <section class="news">
             <h2 class="news-title">LATEST NEWS</h2>
             <ul class="news-list">
-                <li class="news-item">
+                <li class="news__item">
                     <img src="./img/news1.png" alt="news">
-                    <h3 class="news-item-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
-                    <p class="news-item-paragraph">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
-                    <button class="news-item-button">Read More</button>
+                    <h3 class="news-item__title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
+                    <p class="news-item__paragraph">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    <button class="news-item__button">Read More</button>
                 </li>
-                <li class="news-item">
-
+                <li class="news__item">
+                    <img src="./img/news2.png" alt="news">
+                    <h3 class="news-item__title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
+                    <p class="news-item__paragraph">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    <button class="news-item__button">Read More</button>
                 </li>
-                <li class="news-item">
-
+                <li class="news__item">
+                    <img src="./img/news3.png" alt="news">
+                    <h3 class="news-item__title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean </h3>
+                    <p class="news-item__paragraph">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt</p>
+                    <button class="news-item__button">Read More</button>
                 </li>
             </ul>
         </section>
